--- a/index.html
+++ b/index.html
@@ -11,16 +11,27 @@
     <link rel="stylesheet" href="/style.css" />
 
     <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
+    <script src="/rellax.min.js"></script>
   </head>
+
+  <script>
+    var rellax = new Rellax(".rellax");
+  </script>
+
   <body>
     <div id="header">
-      <div id="blob"></div>
-      <div id="navbar">
-        <!--         <h3>
-          Anthony Chow
-        </h3> -->
+      <!--       <div id="blob"></div> -->
+      <img
+        id="blob1"
+        src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2FVector.png?v=1599259833298"
+      />
+      <img
+        class="rellax"
+        id="blob2"
+        src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2FVector2.png?v=1599261709902"
+      />
 
+      <div id="navbar">
         <ul id="links">
           <li><a>Projects</a></li>
           <li><a>Resume</a></li>
@@ -28,10 +39,9 @@
         </ul>
       </div>
       <div>
-        <h1>
-          Hi, I'm Anthony Chow
-        </h1>
-        <h2>
+        <h1>Hi, I'm <b>Anthony Chow</b></h1>
+        <h2>I study Human-Computer Interaction<br />at UC Davis.</h2>
+        <!--         <h2>
           <div>
             <ul>
               <li>Design</li>
@@ -40,7 +50,7 @@
               <li>Design</li>
             </ul>
           </div>
-        </h2>
+        </h2> -->
       </div>
     </div>
 
