--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       <!--       <div id="blob"></div> -->
       <img
         id="blob1"
-        src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2FVector.png?v=1599259833298"
+        src="/assets/Vector.png"
       />
       <img
         class="rellax"
         id="blob2"
-        src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2FVector2.png?v=1599261709902"
+        src="/assets/Vector2.png"
       />
 
       <div id="navbar">
