--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
     <link rel="stylesheet" href="/style.css" />
 
     <!-- import the webpage's javascript file -->
-    <script src="/rellax.min.js"></script>
-  </head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.0.0/rellax.min.js"></script>
 
-  <script>
-    var rellax = new Rellax(".rellax");
-  </script>
+    <script>
+      var rellax = new Rellax(".rellax");
+    </script>
+  </head>
 
   <body>
     <div id="header">
       <!--       <div id="blob"></div> -->
       <img
         id="blob1"
-        src="/assets/Vector.png"
+        src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2FVector.png?v=1599259833298"
       />
       <img
+        src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2FVector2.png?v=1599261709902"
         class="rellax"
+        data-rellax-speed="-5"
         id="blob2"
-        src="/assets/Vector2.png"
       />
 
       <div id="navbar">
