--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
       />
       <img
         src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2FVector2.png?v=1599261709902"
-        class="rellax"
+        class="blob2 rellax"
         data-rellax-speed="-5"
-        id="blob2"
       />
 
       <div id="navbar">
