--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       />
       <img
         src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2FVector2.png?v=1599261709902"
-        class="blob2"
+        id="blob2"
         data-rellax-speed="-5"
       />
 
