--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- import the webpage's javascript file -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.0.0/rellax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js" integrity="sha512-f5HTYZYTDZelxS7LEQYv8ppMHTZ6JJWglzeQmr0CVTS70vJgaJiIO15ALqI7bhsracojbXkezUIL+35UXwwGrQ==" crossorigin="anonymous"></script>
 
     <script>
       var rellax = new Rellax(".rellax");
@@ -29,6 +29,7 @@
       <img
         src="/assets/Vector2.png"
         id="blob2"
+       class="rellax"
         data-rellax-speed="-5"
       />
 
