--- a/index.html
+++ b/index.html
@@ -5,55 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Anthony Chow | Portfolio</title>
+    <title>Anthony Chow • Portfolio</title>
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
-
-    <!-- import the webpage's javascript file -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js" integrity="sha512-f5HTYZYTDZelxS7LEQYv8ppMHTZ6JJWglzeQmr0CVTS70vJgaJiIO15ALqI7bhsracojbXkezUIL+35UXwwGrQ==" crossorigin="anonymous"></script>
-
-    <script>
-      var rellax = new Rellax(".rellax");
-    </script>
   </head>
 
-  <body>
+  <body id="body">
     <div id="header">
       <!--       <div id="blob"></div> -->
       <img
         id="blob1"
-        src="/assets/Vector.png"
+        src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2Fblueblob.svg?v=1599710345430"
       />
       <img
-        src="/assets/Vector2.png"
         id="blob2"
-       class="rellax"
-        data-rellax-speed="-5"
+        src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2Forangeblob.svg?v=1599710345417"
+      />
+      <img
+        id="blob3"
+        src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2Fredblob.svg?v=1599710345398"
       />
 
       <div id="navbar">
         <ul id="links">
-          <li><a>Projects</a></li>
-          <li><a>Resume</a></li>
-          <li><a>About Me</a></li>
+          <li><a href="#case-studies">Projects</a></li>
+          <li><a href="https://drive.google.com/file/d/11wyCKHSn4AzgQAAF11bMCae3xHqwl-fm/view?usp=sharing" target="_blank">Resume</a></li>
+          <li id="about-link">About Me</li>
         </ul>
       </div>
-      <div>
+
+      <div id="intro">
         <h1>Hi, I'm <b>Anthony Chow</b></h1>
         <h2>I study Human-Computer Interaction<br />at UC Davis.</h2>
-        <!--         <h2>
-          <div>
-            <ul>
-              <li>Design</li>
-              <li>Photography</li>
-              <li>Videography</li>
-              <li>Design</li>
-            </ul>
-          </div>
-        </h2> -->
       </div>
+    </div>
+
+    <div class="downArrow bounce">
+      <a href="#case-studies"
+        ><img
+          width="40"
+          height="40"
+          alt=""
+          src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2FdownArrow.svg?v=1599724817757"
+      /></a>
     </div>
 
     <div id="content">
@@ -68,10 +63,9 @@
               Justice Calendar
             </h2>
             <h3 class="product-desc">
-              Promoting commitment towards allyship and understanding regarding
-              racial injustice
+              Helping commit action and understanding towards racial justice
             </h3>
-            <button>
+            <button style="background-color: #EC80A4">
               View Case Study
             </button>
           </div>
@@ -82,11 +76,63 @@
             />
           </div>
         </div>
-        <!--         </div> -->
+        <div class="case-study">
+          <div class="case-study-left">
+            <h1 class="product-type">
+              Digital Queuing System
+            </h1>
+            <h2 class="product-name">
+              TutorQueue
+            </h2>
+            <h3 class="product-desc">
+              A reinvented queuing system for the UC Davis Computer Science
+              Tutoring Center
+            </h3>
+            <button>
+              View Case Study
+            </button>
+          </div>
+          <div class="case-study-right">
+            <img
+              class="product-img"
+              src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2Fwebsite%20mockup.jpg?v=1599697487019"
+            />
+          </div>
+        </div>
       </div>
     </div>
 
-    <!-- include the Glitch button to show what the webpage is about and
-          to make it easier for folks to view source and remix -->
+    <div id="footer">
+      © Anthony Chow 2020
+    </div>
+
   </body>
+
+  <script type="text/javascript">
+    // Parallax Scrolling
+
+    let blob1 = document.getElementById("blob1");
+    let blob2 = document.getElementById("blob2");
+    let blob3 = document.getElementById("blob3");
+    let intro = document.getElementById("intro");
+
+    window.addEventListener("scroll", function() {
+      var value = window.scrollY;
+
+      blob1.style.top = 45 - value * 0.02 + "%";
+      blob2.style.top = 18 - value * 0.01 + "%";
+      blob3.style.top = 73 - value * 0.05 + "%";
+    });
+
+    // About Page Link + Animation
+
+    let about = document.getElementById("about-link");
+    let body = document.getElementById("body");
+
+    about.addEventListener("click", function() {
+      body.className = "leave";
+      setTimeout(500);
+      window.location.href = "about.html";
+    });
+  </script>
 </html>
