updated links to assets

--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
 
   <body id="body">
     <div id="header">
-      <!--       <div id="blob"></div> -->
       <img
         id="blob1"
-        src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2Fblueblob.svg?v=1599710345430"
+        src="/assets/blueblog.svg"
       />
       <img
         id="blob2"
-        src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2Forangeblob.svg?v=1599710345417"
+        src="/assets/orangeblob.svg"
       />
       <img
         id="blob3"
-        src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2Fredblob.svg?v=1599710345398"
+        src="/assets/redblob.svg"
       />
 
       <div id="navbar">
@@ -47,7 +46,7 @@
           width="40"
           height="40"
           alt=""
-          src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2FdownArrow.svg?v=1599724817757"
+          src="/assets/downArrow.svg"
       /></a>
     </div>
 
@@ -72,7 +71,7 @@
           <div class="case-study-right">
             <img
               class="product-img"
-              src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2Fperspective-website-mockup-free-800x526px2.jpg?v=1599104845580"
+              src="/assets/justice-calendar mockup.jpg"
             />
           </div>
         </div>
@@ -95,7 +94,7 @@
           <div class="case-study-right">
             <img
               class="product-img"
-              src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2Fwebsite%20mockup.jpg?v=1599697487019"
+              src="/assets/tutorqueue mockup.jpg"
             />
           </div>
         </div>
