fix names of asset links again

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="header">
       <img
         id="blob1"
-        src="/assets/blueblog.svg"
+        src="/assets/blueblob.svg"
       />
       <img
         id="blob2"
@@ -71,7 +71,7 @@
           <div class="case-study-right">
             <img
               class="product-img"
-              src="/assets/justice-calendar mockup.jpg"
+              src="/assets/justice-calendar-mockup.jpg"
             />
           </div>
         </div>
@@ -94,7 +94,7 @@
           <div class="case-study-right">
             <img
               class="product-img"
-              src="/assets/tutorqueue mockup.jpg"
+              src="/assets/tutorqueue-mockup.jpg"
             />
           </div>
         </div>
