--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <div id="header">
       <img
         id="blob1"
-        src="/assets/blueblob.svg"
+        src="assets/blueblob.svg"
       />
       <img
         id="blob2"
-        src="/assets/orangeblob.svg"
+        src="assets/orangeblob.svg"
       />
       <img
         id="blob3"
-        src="/assets/redblob.svg"
+        src="assets/redblob.svg"
       />
 
       <div id="navbar">
@@ -46,7 +46,7 @@
           width="40"
           height="40"
           alt=""
-          src="/assets/downArrow.svg"
+          src="assets/downArrow.svg"
       /></a>
     </div>
 
@@ -71,7 +71,7 @@
           <div class="case-study-right">
             <img
               class="product-img"
-              src="/assets/justice-calendar-mockup.jpg"
+              src="assets/justice-calender mockup.jpg"
             />
           </div>
         </div>
@@ -94,7 +94,7 @@
           <div class="case-study-right">
             <img
               class="product-img"
-              src="/assets/tutorqueue-mockup.jpg"
+              src="assets/tutorqueue mockup.jpg"
             />
           </div>
         </div>
