remove spaces in image path names

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="case-study-right">
             <img
               class="product-img"
-              src="assets/justice-calender mockup.jpg"
+              src="assets/justice-calender-mockup.jpg"
             />
           </div>
         </div>
@@ -94,7 +94,7 @@
           <div class="case-study-right">
             <img
               class="product-img"
-              src="assets/tutorqueue mockup.jpg"
+              src="assets/tutorqueue-mockup.jpg"
             />
           </div>
         </div>
