--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
         </p>
       </div>
       <div id="portrait">
-        <img src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2Fportrait.png?v=1599875017703">
+        <img src="assets/portrait.png">
       </div>
     </div>
 
