--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <div id="header" style="height: 20vh">
       <div id="navbar">
         <ul id="links">
-          <li><a id="projects-link">Projects</a></li>
+          <li id="projects-link">Projects</li>
           <li><a href="https://drive.google.com/file/d/11wyCKHSn4AzgQAAF11bMCae3xHqwl-fm/view?usp=sharing" target="_blank">Resume</a></li>
           <li>About Me</li>
         </ul>
