--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     about.addEventListener("click", function() {
       body.className = "leave";
       setTimeout(500);
-      window.location.href = "about.html";
+      window.location.href = "about";
     });
   </script>
 </html>
