--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
     projects.addEventListener("click", function() {
       body.className = "leave";
       setTimeout(500);
-      window.location.href = "index.html";
+      window.location.href = "http://achow605.github.io/";
     });
   </script>
 </html>
