oops fixed href name

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <div id="navbar">
         <ul id="links">
-          <li><a onclick="location.href='#profile'>Projects</a></li>
+          <li><a onclick="location.href='#case-studies'>Projects</a></li>
           <li><a href="https://drive.google.com/file/d/11wyCKHSn4AzgQAAF11bMCae3xHqwl-fm/view?usp=sharing" target="_blank">Resume</a></li>
           <li id="about-link">About Me</li>
         </ul>
