--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div id="intro">
         <h1>Hi, I'm <b>Anthony Chow</b></h1>
-        <h2>I study Human-Computer Interaction<br />at UC Davis.</h2>
+        <h2>I study Human-Computer Interaction<br />at the University of California Davis.</h2>
       </div>
     </div>
 
