update on connect statement

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
           Let's Connect!
         </h1>
         <p>
-          Let's have (virtual) coffee by reaching me at <a href="mailto:achow605@gmail.com" target="_blank">achow605@gmail.com</a> or my <a href="https://www.linkedin.com/in/anthony-chow/" target="_blank">LinkedIn</a>!
+          Let's chat over (virtual) coffee by reaching me at <a href="mailto:achow605@gmail.com" target="_blank">achow605@gmail.com</a> or my <a href="https://www.linkedin.com/in/anthony-chow/" target="_blank">LinkedIn</a>!
         </p>
       </div>
       <div id="portrait">
@@ -71,19 +71,7 @@
 
     <div id="footer">
       © Anthony Chow 2020
-
-      <!--       <div class="upArrow bounce" id="upArrowID">
-        <a href="#"
-          ><img
-            width="40"
-            height="40"
-            src="https://cdn.glitch.com/e25bd0c2-8621-457c-9730-d94f0d974980%2FupArrow.svg?v=1599724817873"
-        /></a>
-      </div> -->
     </div>
-
-    <!-- include the Glitch button to show what the webpage is about and
-          to make it easier for folks to view source and remix -->
   </body>
 
   <script type="text/javascript">
