--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h3 class="product-desc">
               Helping commit action and understanding towards racial justice
             </h3>
-            <button style="background-color: #EC80A4">
+            <button style="background-color: #EC80A4" href="justice-calendar">
               View Case Study
             </button>
           </div>
