--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -17,7 +17,7 @@
         <ul id="links">
           <li id="projects-link">Projects</li>
           <li><a href="https://drive.google.com/file/d/11wyCKHSn4AzgQAAF11bMCae3xHqwl-fm/view?usp=sharing" target="_blank">Resume</a></li>
-          <li>About Me</li>
+          <li id="about-link">About Me</li>
         </ul>
       </div>
     </div>
