--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -20,6 +20,8 @@
           <li id="about-link">About Me</li>
         </ul>
       </div>
+      <div id="banner">
+      <img src="./assets/justice-calendar-mockup.jpg"</div>
     </div>
 
     <div id="footer">
