--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -22,7 +22,7 @@
       </ul>
     </div>
     <div id="banner">
-      <img src="./assets/justice-calendar-mockup.jpg" </div>
+      <img src="../assets/justice-calendar-mockup.jpg" </div>
     </div>
 
     <div id="footer">
