--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -22,7 +22,7 @@
       </ul>
     </div>
     <div id="banner">
-      <img src="../assets/justice-calender-mockup.jpg" </div>
+      <img src="../assets/justice-calender-mockup.jpg"></div>
     </div>
 
     <div id="footer">
@@ -45,7 +45,6 @@
   // "About" Page Link + Animation
 
   let about = document.getElementById("about-link");
-  let body = document.getElementById("body");
 
   about.addEventListener("click", function() {
     body.className = "leave";
