--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -21,10 +21,10 @@
         <li id="about-link">About Me</li>
       </ul>
     </div>
-    <div id="banner">
+
+    <div id="case-study-banner">
       <img src="../assets/justice-calender-mockup.jpg"></div>
     </div>
-
     <div id="footer">
       © Anthony Chow 2020
     </div>
