update directory to css file

--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -9,7 +9,7 @@
   <title>Anthony Chow • Justice Calendar</title>
 
   <!-- import the webpage's stylesheet -->
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="../style.css" />
 </head>
 
 <body id="body">
@@ -21,10 +21,10 @@
         <li id="about-link">About Me</li>
       </ul>
     </div>
-
     <div id="case-study-banner">
       <img src="../assets/justice-calender-mockup.jpg"></div>
     </div>
+
     <div id="footer">
       © Anthony Chow 2020
     </div>
