--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -21,13 +21,14 @@
         <li id="about-link">About Me</li>
       </ul>
     </div>
-    <div id="case-study-banner">
-      <img src="../assets/justice-calender-mockup.jpg"></div>
-    </div>
+  </div>
+  <div id="case-study-banner">
+    <img src="../assets/justice-calender-mockup.jpg">
+  </div>
 
-    <div id="footer">
-      © Anthony Chow 2020
-    </div>
+  <div id="footer">
+    © Anthony Chow 2020
+  </div>
 </body>
 
 <script type="text/javascript">
