--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -24,6 +24,7 @@
   </div>
   <div id="case-study-banner">
     <img src="../assets/justice-calendar-banner.jpg">
+    <h1>Justice Calendar</h1>
   </div>
 
   <div id="footer">
