overview paragraph plus title

--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -24,8 +24,19 @@
   </div>
   <div id="case-study-banner">
     <img src="../assets/justice-calendar-banner.jpg">
-    <h1>Justice Calendar</h1>
   </div>
+  <div id="case-study-body">
+    <h1>Justice Calendar</h1>
+    <h2>Overview</h2>
+    <h3>Justice is a Marathon, not a Sprint</h3>
+    <p>Justice Calendar is a simple Google Calendar integration tool and web application designed for people who want to learn more about racial injustice happening in the world and what they can do about it by allocating time for users to learn,
+      listen, and reflect while working around their busy schedules.
+      <br>
+      Starting as a project for the UC Davis Design Interactive cohort, we continued working on Justice Calendar after the initial five weeks of the project to work part time with the professor as interaction designers.
+    </p>
+
+  </div>
+
 
   <div id="footer">
     © Anthony Chow 2020
