contributors and roles + h1 css

--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -34,6 +34,15 @@
       <br>
       Starting as a project for the UC Davis Design Interactive cohort, we continued working on Justice Calendar after the initial five weeks of the project to work part time with the professor as interaction designers.
     </p>
+    <h2>Contributors</h2>
+    <h2>Design Sprint Roles</h2>
+    <ul>
+      <li>Anthony - Research Sprint lead</li>
+      <li>Lorren - Ideation Sprint Lead</li>
+      <li>Sydnee - Low-Fidelity Sprint Lead</li>
+      <li>Aileen - High-Fidelity Sprint Lead</li>
+    </ul>
+    <h2>Design Process</h2>
 
   </div>
 
