Added new photo and added link

--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -125,18 +125,23 @@
       </p>
       <h3>Further Development</h3>
       <h4>Working with our Client</h4>
-      <p>After concluding the project with Design Interactive, our client wanted to hire us for further development of the Justice Calendar project. However, he hired us with the intention of developing this as a web application which followed very
-        similar interfaces as our Google Chrome extension variation of this. During these six additional weeks, we dove straight into ideations and prototyping to design and create this web application. This process was a lot more different than
-        before though, because our role as interaction designers also involved bits of web design given that we only had web developers to work with. We were posed with the unique challenge of learning CSS and web design principles after working on
+      <img src="..\assets\justice-calendar-web-mockup.jpg" alt="Justice Calendar with Further Development">
+      <p>After concluding the project with Design Interactive, our client wanted to hire us for further development of the Justice Calendar project. One of the most prominent changes made in this extension of the project was the shift from a Google
+        Chrome extension to a web application. Nonetheless, the interfaces still looked similar and were optomized for the larger interface size.
+        <br><br>
+        During these six additional weeks, we dove straight into ideations and prototyping to design and create
+        this web application. This process was a lot more different than before though, because our role as interaction designers also involved bits of web design given that we only had web developers to work with. We were posed with the unique challenge of learning CSS and web design principles after working on
         our initial prototypes on Figma. We decided to try using Webflow, which simplified the CSS coding to a more intuitive interface while also being able to export to developers so that they can develop the back end with ease.
+        <br><br>
+        The site is now live at <a href="https://justicecalendar.org/" target="_blank">justicecalendar.org</a>.
       </p>
       <h3>Challenges and Reflections</h3>
       <h4>Remote Collaboration</h4>
       <p>This project posed a lot of unique challenges for me and every other member of our project team. Working together as a group was a bit challenging given that a member lived in Australia with the rest of us in the US, so we always had to work
         around the differing time zones.</p>
-      <h4>Dabbling into web development (After the Design Sprint)</h4>
+      <h4>Learning Webflow (After the Design Sprint)</h4>
       <p>During our time working as hired designers for our client, we did not initially think that we’d be working partly as web designers as well. Most of our group was unfamiliar with coding in CSS or flexbox and other web design principles so we
-        spent a lot of our working time just learning more about it. </p>
+        spent a lot of our working time just learning more about it. Our client had us work with the web development tool Webflow, so there was a slight learning curve as well when moving forward with this project</p>
       <h4>Reflection</h4>
       <p>This was my very first design sprint while working with a real client and my very first taste of what real-world design work. Although it was challenging and intimidating at first, I came out of this project with so much more experience and
         knowledge of the design process and working with clients. I got introduced to research and ideation tools that helped me learn to empathize with users and prioritize pain points. Out of all the other project groups in Design Interactive, our
