idk why jpg was not working

--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -66,7 +66,7 @@
       <img src="../assets/jc-experiencemap.jpg" alt="Experience Map">
       <p>After gathering these user insights, we created an experience map of a potential user to better understand any pain points that might occur along the way when trying to learn about racial injustice. </p>
       <h4>Affinity Mapping</h4>
-      <img src="../assets/jc-affinitymap.jpg" alt="Affinity Map">
+      <img src="../assets/jc-affinitymap.JPG" alt="Affinity Map">
       <p>After this, we generated an affinity map to organize these pain points and ideate some solutions to them. We did this by listing pain points as sticky notes and then organizing them into categories, helping our team get a better
         understanding of how pain points may relate to each other and how to effectively tackle them.</p>
       <h4>Problem Statement</h4>
@@ -84,7 +84,7 @@
       <p>We started with a low-fidelity prototype using Figma to create our app. We experimented with full size pages and interfaces that only took a small portion of the screen.
       </p>
       <h3>High-Fidelity Prototyping</h3>
-      <img src="../assets/jc-hfdg.jpg" alt="High-Fidelity Design Guidelines">
+      <img src="../assets/jc-hfdg.JPG" alt="High-Fidelity Design Guidelines">
       <p>We consulted with our client and our mentor to move onto our high-fidelity prototype, where we created design guidelines and worked to improve the flow of our scheduling process.</p>
       <div class="hf-body">
         <div class="hf-left">
