Added more descriptions to jc case study

--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -28,6 +28,7 @@
   <div id="case-study-body-container">
     <div id="case-study-body">
       <h1>Justice Calendar</h1>
+        <p><pre style="margin: 0 auto 5vh auto;">User Experience Design      |      Figma & Webflow      |      Team of 4      |      5(+6) Weeks </pre></p>
       <img src="../assets/justice-calender-mockup.jpg" alt="Justice Calendar Mockup">
       <h2>Overview</h2>
       <h3>Justice is a Marathon, not a Sprint</h3>
@@ -38,7 +39,7 @@
       </p>
       <h2>Contributors & Roles</h2>
       <img src="../assets/jc-team.jpg">
-      <h2>Design Process</h2>
+      <h2>Design Process (5 Weeks)</h2>
       <h3>Research</h3>
       <p>Upon starting this sprint, we first consulted with our client, an assistant professor for the Design department at UC Davis. We discussed the initial concept and idea behind a calendar tool that would schedule time to learn about racial
         injustice and promote anti-racist actions.
@@ -123,7 +124,7 @@
         We were able to conduct testing with our client at the time, and we continued to iterate on the verbage and intuitiveness of the first-time user flow. At the end of the design sprint, our team presented our final version of the high-fidelity
         prototype to the rest of the cohort and other design professionals.
       </p>
-      <h3>Further Development</h3>
+      <h3>Further Development (6 Weeks)</h3>
       <h4>Working with our Client</h4>
       <img src="..\assets\justice-calendar-web-mockup.jpg" alt="Justice Calendar with Further Development">
       <p>After concluding the project with Design Interactive, our client wanted to hire us for further development of the Justice Calendar project. One of the most prominent changes made in this extension of the project was the shift from a Google
