--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -177,7 +177,7 @@
   about.addEventListener("click", function() {
     body.className = "leave";
     setTimeout(500);
-    window.location.href = "about";
+    window.location.href = "../about";
   });
 </script>
 
