--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               A reinvented queuing system for the UC Davis Computer Science
               Tutoring Center
             </h3>
-            <button>
+            <button style="background-color: #BC941D" onclick="window.location.href='case-studies/tutorqueue';">
               View Case Study
             </button>
           </div>
