--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    
+    <meta name="google-site-verification" content="pyTXo0EcGIfvsLAczoDhsnnOOA_ivPa2PGZ-92zIpOQ" />
+    
     <title>Anthony Chow • Portfolio</title>
 
     <!-- import the webpage's stylesheet -->
