--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -26,16 +26,16 @@
     <img src="../assets/justice-calender-mockup.jpg">
   </div> -->
   <div id="case-study-body-container">
-    <div id="case-study-body">
+    <div id="case-study-body" class="justice-calendar">
       <h1>Justice Calendar</h1>
         <p><pre style="margin: 0 auto 5vh auto;">User Experience Design      |      Figma & Webflow      |      Team of 4      |      5(+6) Weeks </pre></p>
       <img src="../assets/justice-calender-mockup.jpg" alt="Justice Calendar Mockup">
       <h2>Overview</h2>
       <h3>Justice is a Marathon, not a Sprint</h3>
-      <p>Justice Calendar is a simple Google Calendar integration tool designed for people who want to learn more about racial injustice happening in the world and what they can do about it by allocating time for users to learn,
-        listen, and reflect while working around their busy schedules.
+      <p>Justice Calendar is a simple <b>Google Calendar integration tool</b> designed for people who want to <b>learn more about racial injustice</b> happening in the world and what they can do about it by <b>allocating time for users to learn,
+        listen, and reflect</b> while working around their busy schedules.
         <br><br>
-        Starting as a project for the UC Davis Design Interactive cohort, we continued working on Justice Calendar after the initial five weeks of the project to work part time with the professor as interaction designers.
+        Starting as a project for the UC Davis Design Interactive cohort, we continued working on Justice Calendar after the initial <b>five weeks</b> of the project to work part time with the professor as interaction designers.
       </p>
       <h2>Contributors & Roles</h2>
       <img src="../assets/jc-team.jpg">
@@ -45,7 +45,7 @@
         injustice and promote anti-racist actions.
         <br><br>
         After consulting with our client, we wanted to get a better understanding of what kind of commitment users are willing to make to learn more about racial injustice and how people consider their current general knowledge on it, so we created a
-        google form with questions pertaining to these along with general information about respondents including their own ethnicities.
+        <b>Google Form survey</b> with questions pertaining to these along with general information about respondents including their own ethnicities.
       </p>
       <h3>Research Analysis</h3>
       <p>Of the 81 respondents to our survey, we saw that:</p>
@@ -58,18 +58,18 @@
       </ul>
       <p>From this collected data, we took away that:</p>
       <ul>
-        <li>People of all ethnicities can learn more about racial injustice and have varying levels of knowledge</li>
+        <li><b>People of all ethnicities can learn more about racial injustice and have varying levels of knowledge</li>
         <li>People are generally willing to put in time to learn more about racial injustice</li>
-        <li>A majority of people like to use Google Calendar to schedule things for them to do</li>
+        <li>A majority of people like to use Google Calendar to schedule things for them to do</b></li>
       </ul>
       <h3>Ideation</h3>
       <h4>Experience Mapping</h4>
       <img src="../assets/jc-experiencemap.jpg" alt="Experience Map">
-      <p>After gathering these user insights, we created an experience map of a potential user to better understand any pain points that might occur along the way when trying to learn about racial injustice. </p>
+      <p>After gathering these user insights, we created an <b>experience map</b> of a potential user to better understand any <b>pain points</b> that might occur along the way when trying to learn about racial injustice. </p>
       <h4>Affinity Mapping</h4>
       <img src="../assets/jc-affinitymap.JPG" alt="Affinity Map">
-      <p>After this, we generated an affinity map to organize these pain points and ideate some solutions to them. We did this by listing pain points as sticky notes and then organizing them into categories, helping our team get a better
-        understanding of how pain points may relate to each other and how to effectively tackle them.</p>
+      <p>After this, we generated an <b>affinity map</b> to organize these pain points and ideate some solutions to them. We did this by listing pain points as sticky notes and then organizing them into categories, helping our team get a better
+        understanding of how <b>pain points may relate to each other and how to effectively tackle them</b>.</p>
       <h4>Problem Statement</h4>
       <p>From this, we were able to create our problem statement: </p>
       <p style="color: #EC80A4; text-align: center;"><b>"How might we encourage users to commit time each week to learn about racial injustice and set personal goals to spark understanding, self-reflection, and informed action?”</b></p>
@@ -82,18 +82,18 @@
       <h3>Low-Fidelity Prototyping</h3>
       <img src="../assets/jc-lf.png" alt="Low-Fidelity Prototypes">
       <img src="../assets/jc-lf2.jpg" alt="Low-Fidelity Prototypes">
-      <p>We started with a low-fidelity prototype using Figma to create our app. We experimented with full size pages and interfaces that only took a small portion of the screen.
+      <p>We started with a low-fidelity prototype using <b>Figma</b> to create our app. We experimented with full size pages and interfaces that only took a small portion of the screen.
       </p>
       <h3>High-Fidelity Prototyping</h3>
       <img src="../assets/jc-hfdg.JPG" alt="High-Fidelity Design Guidelines">
-      <p>We consulted with our client and our mentor to move onto our high-fidelity prototype, where we created design guidelines and worked to improve the flow of our scheduling process.</p>
+      <p>We consulted with our client and our mentor to move onto our high-fidelity prototype, where we created <b>design guidelines</b> and worked to improve the <b>flow of our scheduling process.</b></p>
       <div class="hf-body">
         <div class="hf-left">
           <img src="../assets/jc-hf1.gif" alt="First-Time Setup">
         </div>
         <div class="hf-right">
           <h4>Login & User Setup</h4>
-          <p>From our low-fidelity prototype to our high-fidelity prototype, we wanted to ensure that the process of users getting started was streamline and smooth. Part of this process was the specific language used in each screen to provide a
+          <p>From our low-fidelity prototype to our high-fidelity prototype, we wanted to ensure that the process of users getting started was <b>streamline and smooth.</b> Part of this process was the specific language used in each screen to provide a
             sense of guidance and comfort throughout the process. We wanted to ensure that users knew exactly what they're supposed to do and why they're doing it.</p>
         </div>
       </div>
@@ -103,7 +103,7 @@
         </div>
         <div class="hf-right">
           <h4>Scheduling</h4>
-          <p>From our user research, we wanted to incorporate seamless integration with Google Calendar and provide a scheduling interface that is both intuitive and familiar. </p>
+          <p>From our user research, we wanted to incorporate seamless integration with Google Calendar and provide a scheduling interface that is both <b>intuitive and familiar.</b> </p>
         </div>
       </div>
       <div class="hf-body">
@@ -117,36 +117,35 @@
       </div>
       <img src="../assets/jc-hf4.gif" alt="Dashboard & More">
       <h4>Fullscreen Interfaces</h4>
-      <p>Users can access a larger dashboard with their scheduled content. User stats can incite more engagement and promotes consistant use of Justice Calendar. Reflections for certain materials may hold a lot of important and insightful
+      <p>Users can access a larger dashboard with their scheduled content. User stats can <b>incite more engagement and promotes consistant use of Justice Calendar</b>. Reflections for certain materials may hold a lot of important and insightful
         information, so users can also access past reflections in their journal.</p>
       <h4>User Testing</h4>
       <p>
-        We were able to conduct testing with our client at the time, and we continued to iterate on the verbage and intuitiveness of the first-time user flow. At the end of the design sprint, our team presented our final version of the high-fidelity
+        We were able to conduct <b>testing with our client</b> at the time, and we continued to iterate on the <b>verbage and intuitiveness of the first-time user flow</b>. At the end of the design sprint, our team presented our final version of the high-fidelity
         prototype to the rest of the cohort and other design professionals.
       </p>
       <h3>Further Development (6 Weeks)</h3>
       <h4>Working with our Client</h4>
       <img src="..\assets\justice-calendar-web-mockup.jpg" alt="Justice Calendar with Further Development">
       <p>After concluding the project with Design Interactive, our client wanted to hire us for further development of the Justice Calendar project. One of the most prominent changes made in this extension of the project was the shift from a Google
-        Chrome extension to a web application. Nonetheless, the interfaces still looked similar and were optomized for the larger interface size.
+        <b>Chrome extension to a web application</b>. Nonetheless, the interfaces still looked similar and were optomized for the larger interface size.
         <br><br>
         During these six additional weeks, we dove straight into ideations and prototyping to design and create
-        this web application. This process was a lot more different than before though, because our role as interaction designers also involved bits of web design given that we only had web developers to work with. We were posed with the unique challenge of learning CSS and web design principles after working on
-        our initial prototypes on Figma. We decided to try using Webflow, which simplified the CSS coding to a more intuitive interface while also being able to export to developers so that they can develop the back end with ease.
+        this web application. This process was a lot more different than before though: we started <b>working with back-end developers</b> and collaborated often to ensure that the design and functionality worked together. The back-end developers were unfamiliar with front-end development, so our team of interaction designers took it upon ourselves to <b>learn a bit of front-end web development</b>. We were posed with the unique challenge of <b>learning CSS and web design principles</b> after working on our initial prototypes on Figma. We decided to try using <b>Webflow</b>, which simplified the CSS coding to a more intuitive interface while also being able to export to developers so that they can develop the back end with ease.
         <br><br>
         The site is now live at <a href="https://justicecalendar.org/" target="_blank">justicecalendar.org</a>.
       </p>
       <h3>Challenges and Reflections</h3>
       <h4>Remote Collaboration</h4>
-      <p>This project posed a lot of unique challenges for me and every other member of our project team. Working together as a group was a bit challenging given that a member lived in Australia with the rest of us in the US, so we always had to work
-        around the differing time zones.</p>
+      <p>This project posed a lot of unique challenges for me and every other member of our project team. Working together as a group was a bit challenging given that a member lived in <b>Australia</b> with the rest of us in the US, so we always had to work
+        around the <b>differing time zones.</b></p>
       <h4>Learning Webflow (After the Design Sprint)</h4>
       <p>During our time working as hired designers for our client, we did not initially think that we’d be working partly as web designers as well. Most of our group was unfamiliar with coding in CSS or flexbox and other web design principles so we
         spent a lot of our working time just learning more about it. Our client had us work with the web development tool Webflow, so there was a slight learning curve as well when moving forward with this project</p>
       <h4>Reflection</h4>
-      <p>This was my very first design sprint while working with a real client and my very first taste of what real-world design work. Although it was challenging and intimidating at first, I came out of this project with so much more experience and
-        knowledge of the design process and working with clients. I got introduced to research and ideation tools that helped me learn to empathize with users and prioritize pain points. Out of all the other project groups in Design Interactive, our
-        project group was the only one to get hired by our client to continue our work. I got the opportunity to work with real web developers and learn how to effectively communicate with them in developing the overall application.
+      <p>This was my very first design sprint while working with a real client and my very first taste of what <b>real-world design work</b>. Although it was challenging and intimidating at first, I came out of this project with so much more experience and
+        knowledge of the design process and working with clients. I got introduced to <b>research and ideation tools</b> that helped me learn to empathize with users and prioritize pain points. Out of all the other project groups in Design Interactive, our
+        project group was the <b>only one to get hired by our client to continue our work</b>. I got the opportunity to work with <b>real web developers</b> and learn how to effectively communicate with them in developing the overall application.
       </p>
     </div>
   </div>
